# slopmail

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  demo.html  eslint.config.js  flake.nix  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: App.test.tsx  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: migrations.rs  migrations.sql  mod.rs  models.rs
src-tauri/src/email/: imap.rs  imap_tests.rs  mod.rs  smtp.rs
src/components/: AccountSetup.tsx  ComposeWindow.tsx  EmailDetail.tsx  EmailList.tsx  FolderTree.tsx
src/types/: email.ts
