[package]
name = "slopmail"
version = "0.1.0"
description = "A modern, privacy-focused email client"
authors = ["SlopMail Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# Email protocols
async-imap = "0.10"
async-native-tls = "0.5"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# Search engine
tantivy = "0.22"

# Encryption and security
sequoia-openpgp = "1.21"
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"

# OAuth2
oauth2 = "4.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
base64 = "0.22"
mailparse = "0.15"

# HTTP client for OAuth and APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
